Fix different gaps in header
Gap between navigation and about-me wasn't equal bottom padding

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .header {
   display: flex;
   flex-direction: column;
-  gap: 36px;
+  gap: 80px;
 }
 
 .navigation {
